--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ addons:
 install:
   - >
       conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
-      nose
+      nose pylint
   - source activate test-environment
   - pip install pypandoc
   - pip install -r requirements.txt
