--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ language: python
 python:
   - "2.7"
   - "3.5"
+addons:
+  apt:
+    packages:
+      # install pandoc for use with pypandoc for converting the README
+      # from markdown to RST
+      - pandoc
 before_install:
   # Commands below copied from: http://conda.pydata.org/docs/travis.html
   # We do this conditionally because it saves us some downloading if the
