--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ addons:
       # Needed for NetMHC
       - tcsh
 cache:
-  pip: true
-  # cache directory used for Ensembl downloads of GTF and FASTA files
+  # cache pip files, also directory used for Ensembl downloads of GTF and FASTA files
   # along with the indexed db of intervals and ID mappings and pickles
   # of sequence dictionaries
-  directories: /home/travis/.cache/pyensembl/
+  directories:
+    - /home/travis/.cache/pyensembl/
+    - /home/travis/.cache/pip
 before_install:
   # Commands below copied from: http://conda.pydata.org/docs/travis.html
   # We do this conditionally because it saves us some downloading if the
@@ -60,11 +61,12 @@ install:
   # install mhctools, vaxrank and its dependent data
   - pip install --upgrade -r $PWD/mhctools/requirements.txt
   - pip install --upgrade -r $PWD/vaxrank/requirements.txt
-  - pyensembl install --release 87 --species human
-  - pyensembl install --release 87 --species mouse
 before_script:
   # needed for MHCflurry predictor test
   - mhcflurry-downloads fetch
+  # needed for vaxrank
+  - pyensembl install --release 87 --species human
+  - pyensembl install --release 87 --species mouse
 script:
   - ./lint.sh
   # -a '!skip' lets us skip certain tests on travis (relevant for vaxrank)
