--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,8 @@ cache:
     - $HOME/.cache/pip
     - $HOME/miniconda
 before_install:
-  # Commands below copied from: http://conda.pydata.org/docs/travis.html
-  # We do this conditionally because it saves us some downloading if the
-  # version is the same.
+  # don't install miniconda if it's already cached
+  # if not yet installed, use different versions for py2 vs. py3
   - if test -e $HOME/miniconda/bin ; then
       echo "miniconda already installed."
     else
