--- a/.travis.yml
+++ b/.travis.yml
@@ -19,18 +19,13 @@ cache:
 before_install:
   # don't install miniconda if it's already cached
   # if not yet installed, use different versions for py2 vs. py3
-  - if test -e $HOME/miniconda/bin ; then
-      echo "miniconda already installed."
-    else
-      rm -rf $HOME/miniconda
-      if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
         wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
       else
         wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
       fi
-      bash miniconda.sh -b -p $HOME/miniconda
-      export PATH="$HOME/miniconda/bin:$PATH"
-    fi
+  - bash miniconda.sh  -u -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
   # reset the shell's lookup table for program name to path mappings
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
