got some of the swine unit tests working

--- a/mhcnames/data/allele_aliases.yaml
+++ b/mhcnames/data/allele_aliases.yaml
@@ -5,6 +5,12 @@
 #
 ####################################################
 SLA:
+  # treating "HB" as a locus
+  1*HB01: 1*HB:01
+  1*HB02: 1*HB:02
+  1*HB03: 1*HB:03
+  1*HB04: 1*HB:04
+  # provisional allele names
   1*01rh28: 1*01:03
   1*02we02: 1*02:03
   1*04gx01: 1*04:03
