added Patr allele aliases

--- a/mhcnames/data/allele_aliases.yaml
+++ b/mhcnames/data/allele_aliases.yaml
@@ -233,3 +233,8 @@ SLA:
   DRB3*01bL83: DRB3*03:01
   DRB3*01bL84: DRB3*04:01
   DRB3*01bL85: DRB3*05:01
+Patr:
+  # footnote in Table 1 of 10.1016/j.molimm.2009.09.003
+  DRB*W901: DRB3*0701
+  DRB*W902: DRB3*0702
+  DRB*W903: DRB3*0703
