just use alias for all species which have one

--- a/mhcnames/data/species.yaml
+++ b/mhcnames/data/species.yaml
@@ -62,7 +62,7 @@ Salmonids:
 Ovids:
   Ovis aries:
     prefix: Ovar
-    alias: OVA
+    alias: OLA
     common name:
       - Domestic Sheep
       - Sheep
